--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,24 @@ body {
     position: absolute;
 }
 
+.footer {
+    text-align: center;
+    margin-bottom: 2.4rem;
+    margin-top: 8.4rem;
+}
+
+.footer__text {
+    font-size: var(--fs-md);
+    font-weight: 500;
+    font-family: var(--f-family-montserrat);
+    color: var(--secondary-color);
+}
+
+.footer__text a {
+    color: var(--secondary-color);
+    font-weight: 700;
+}
+
 @media (min-width: 640px) {
     .header {
         flex-direction: row;
@@ -167,5 +185,9 @@ body {
 
     .wrapper__crew-job {
         transform: rotate(90deg) translateY(-21.7rem) translateX(3.2rem);
+    }
+
+    .footer {
+        margin-top: 9.8rem;
     }
 }
